--- a/package.json
+++ b/package.json
@@ -12,8 +12,19 @@
     "@auth/drizzle-adapter": "^0.8.2",
     "@mantine/core": "^7.7.1",
     "@mantine/hooks": "^7.7.1",
+    "@mantine/notifications": "^7.7.1",
     "@mantine/nprogress": "^7.7.1",
+    "@mantine/tiptap": "^7.7.1",
     "@tabler/icons-react": "^3.1.0",
+    "@tiptap/extension-highlight": "^2.2.6",
+    "@tiptap/extension-link": "^2.2.6",
+    "@tiptap/extension-subscript": "^2.2.6",
+    "@tiptap/extension-superscript": "^2.2.6",
+    "@tiptap/extension-text-align": "^2.2.6",
+    "@tiptap/extension-underline": "^2.2.6",
+    "@tiptap/pm": "^2.2.6",
+    "@tiptap/react": "^2.2.6",
+    "@tiptap/starter-kit": "^2.2.6",
     "drizzle-orm": "^0.30.7",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
