--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.8.2",
+    "@mantine/charts": "^7.7.1",
     "@mantine/core": "^7.7.1",
     "@mantine/hooks": "^7.7.1",
     "@mantine/notifications": "^7.7.1",
     "@mantine/nprogress": "^7.7.1",
     "@mantine/tiptap": "^7.7.1",
     "@tabler/icons-react": "^3.1.0",
+    "@tailwindcss/typography": "^0.5.12",
     "@tiptap/extension-highlight": "^2.2.6",
     "@tiptap/extension-link": "^2.2.6",
     "@tiptap/extension-subscript": "^2.2.6",
@@ -31,22 +34,28 @@
     "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@testing-library/react": "^14.3.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.4.0"
   }
 }
